<resources>
    <string name="app_name">Home Sewa</string>
    <string name="roof">Home-</string>
    <string name="care">Sewa</string>
    <string name="register">Sign Up</string>
    <string name="or">OR</string>
    <string name="have_acc">Already have an account?</string>
    <string name="log_in_now">Log In!</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="log_in">Log In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_now">Sign Up!</string>
    <string name="offer">Offers</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="add_offer">Offer</string>
    <string name="menu">Menu</string>
    <string name="my_bookings">My Bookings</string>
    <string name="booking_history">Booking History</string>
    <string name="settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="invalid_details">Invalid username or password!</string>
    <string name="search_here">Search here…</string>
    <string name="title_activity_customer_profile_s">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics."
    </string>
    <string name="action_settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="about">About</string>
    <string name="ratings">Ratings</string>
    <string name="professions">Professions</string>
    <string name="reviews">Reviews</string>
    <string name="book_now">Book Now!</string>
    <string name="visit_your_profile">Visit your profile</string>
    <string name="this_is_me_prachan_ghale">This is me prachan ghale</string>
    <string name="write_review">Write review</string>
    <string name="add_review">Add Review</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="send_request">Send Request</string>
    <string name="send_booking_request">Send Booking Request</string>
    <string name="booking_requests">Booking Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="accept_booking">Make Bill</string>
    <string name="view_bill">View Bill</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="close">Close</string>
    <string name="which_best_describe_you">Which best describe you?</string>
    <string name="customer">Customer</string>
    <string name="service_users_can">Service users can use different available services.</string>
    <string name="next">Next</string>
    <string name="vendor">Vendor</string>
    <string name="service_giver_are">Vendors are those who are here to work, provide to services to customers.</string>
    <string name="enter_full_name">Full name</string>
    <string name="enter_dob">DOB</string>
    <string name="enter_address">Address</string>
    <string name="enter_about_yourself">About yourself</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_you_basic_details">Enter you basic details</string>
    <string name="prepare_yourself_for_login">Prepare yourself for login</string>
    <string name="almost_there_add_your_skills">Almost there, add your skills</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="add_image">Add Image</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="add_post">Add Post</string>
    <string name="add_description_for_your_offers">Add description for your offers</string>
    <string name="post">Post</string>
    <string name="add_skills_here">Add Skills Here</string>
    <string name="change_password">Change Password</string>
    <string name="update_skills">Update Skills</string>
    <string name="enter_contact">Enter contact</string>
    <string name="change_profile">Change Profile</string>
    <string name="description">Description</string>
    <string name="service_date">Service Date</string>
    <string name="booking_date">Booking Date</string>
    <string name="total_price">Total Price</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string-array name="booking_requests_list">
        <item>Requests I send </item>
        <item>Requests for me</item>
    </string-array>

    <string-array name="bookings">
        <item>I am Booked</item>
        <item>I Booked</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>