<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.register.BasicDetailsFormActivity">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_close_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/enter_you_basic_details"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/viewBg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:inputType="text"
                    android:text="Sagar Kunwar"
                    tools:ignore="Autofill,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dobL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/enter_dob"
                    android:inputType="text"
                    android:text="Jan 17, 1999"
                    tools:ignore="Autofill,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_address"
                    android:inputType="text"
                    android:text="Kathmandu"
                    tools:ignore="Autofill,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/aboutL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_about_yourself"
                    android:text="A little about me."
                    tools:ignore="Autofill,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:entries="@array/gender" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_bg"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>