<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:theme="@style/BoxTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/capriola"
                android:text="@string/roof"
                android:textColor="@color/gColor"
                android:textSize="36sp"
                android:transitionName="roof"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/textNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/capriola"
                android:text="@string/care"
                android:textColor="@color/noteColor"
                android:textSize="36sp"
                android:transitionName="care"
                tools:ignore="RelativeOverlap,UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawableLeft="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="10dp"
                    android:gravity="top"
                    android:hint="Enter number"
                    android:inputType="phone"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/register"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circular_text_bg"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_acc"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/log_in_now"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>