<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:theme="@style/BoxTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/capriola"
                android:text="@string/roof"
                android:textColor="@color/gColor"
                android:textSize="36sp"
                android:transitionName="textG"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/textNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/capriola"
                android:text="@string/care"
                android:textColor="@color/noteColor"
                android:textSize="36sp"
                android:transitionName="textNote"
                tools:ignore="RelativeOverlap,UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_phoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawableLeft="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="10dp"
                    android:gravity="top"
                    android:hint="Enter username"
                    android:inputType="text"
                    android:text="asdf"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:gravity="top"
                    android:hint="Enter password"
                    android:inputType="textPassword"
                    android:text="asdf"
                    tools:ignore="HardcodedText" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:drawableTint="@color/red"
                android:gravity="center"
                android:text="@string/invalid_details"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="gone"
                app:drawableLeftCompat="@drawable/ic_baseline_error_24"
                tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <CheckBox
                    android:id="@+id/checkbox_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/remember_me"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/buttonLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/button_bg"
                    android:text="@string/log_in"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:elevation="10dp"
                    android:visibility="gone"
                    tools:ignore="UnusedAttribute" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circular_text_bg"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textViewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_now"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>