<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_close_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/which_best_describe_you"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/shadow_view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/top_nav"
        android:background="@color/viewBg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/shadow_view"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize,UselessLeaf">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_supervised_user_circle_24"
                        app:tint="@color/black"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/customer"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/service_users_can"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_build_24"
                        app:tint="@color/black"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/vendor"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/service_giver_are"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/serviceProvider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>